@@ -1190,8 +1190,6 @@ namespace {
 
         PluginInstance & pluginInstance = *static_cast<PluginInstance *>(data);
 
-        const int fd = g_io_channel_unix_get_fd(source);
-        fd_set readfds;
         gchar c;
         do {
             gsize bytes_read;
@@ -1213,20 +1211,7 @@ namespace {
 
             if (c != '\n') { pluginInstance.request_line.put(c); }
 
-            FD_ZERO(&readfds);
-            FD_SET(fd, &readfds);
-
-            fd_set errorfds;
-            FD_ZERO(&errorfds);
-            FD_SET(fd, &errorfds);
-
-            timeval timeout = { 0, 0 };
-            int bits_set = select(fd + 1, &readfds, 0, &errorfds, &timeout);
-            if (FD_ISSET(fd, &errorfds) || bits_set < 0) {
-                g_warning(strerror(errno));
-                g_return_val_if_reached(false);
-            }
-        } while (c != '\n' && FD_ISSET(fd, &readfds));
+        } while (g_io_channel_get_buffer_condition(source) & G_IO_IN);
 
         if (c == '\n') {
             string request_type;
